fix: fixed overflow-x

--- a/task1/style.css
+++ b/task1/style.css
@@ -7,6 +7,7 @@
 
 .wrapper {
   background-color: #222;
+  overflow-x: hidden;
 }
 
 .wrapper-films {
